dataset1235/2025-2/805158916/users/2311811032/executions/1584167357_2296111720.log
== RUN (2025-08-27 15:36:38)
-- CODE: 
# Cálculo do retângulo

# 1 Entrada

# 1.1 Base do retângulo
base = float(input('4'))

# 1.1 Altura do retângulo
altura = float(input('8'))

# 2 Comando

# 2.1 Área do retângulo
area = base * altura

# 3 Saída
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
---- user output:
4836.0
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
---- user output:
486000.0
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
---- user output:
48360.0
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
---- user output:
486.0
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
---- user output:
481000.0
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
---- user output:
4883.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:10:21)
-- CODE: 
base = float(input('4')
altura = float(input('8'))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 1
    base = float(input('4')
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 1
    base = float(input('4')
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 1
    base = float(input('4')
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 1
    base = float(input('4')
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 1
    base = float(input('4')
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 1
    base = float(input('4')
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:59:08)
-- CODE: 
# Cálculo do Retângulo

# 1 Entrada

# 1.1 Base do retângulo
base = float(input('4'))

# 1.1 Altura do retângulo
altura = float(input('8'))

# 2 Comando

# 2.1 Área do retângulo
area = base * altura

# 3 Saída
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
---- user output:
4836.0
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
---- user output:
486000.0
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
---- user output:
48360.0
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
---- user output:
486.0
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
---- user output:
481000.0
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
---- user output:
4883.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:10:50)
-- CODE: 
base = float(input('4'))
altura = float(input('8'))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
---- user output:
4836.0
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
---- user output:
486000.0
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
---- user output:
48360.0
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
---- user output:
486.0
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
---- user output:
481000.0
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
---- user output:
4883.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:10:24)
-- CODE: 
base = float(input('4')
altura = float(input('8'))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 1
    base = float(input('4')
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 1
    base = float(input('4')
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 1
    base = float(input('4')
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 1
    base = float(input('4')
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 1
    base = float(input('4')
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 1
    base = float(input('4')
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:36:39)
-- CODE: 
# Cálculo do retângulo

# 1 Entrada

# 1.1 Base do retângulo
base = float(input('4'))

# 1.1 Altura do retângulo
altura = float(input('8'))

# 2 Comando

# 2.1 Área do retângulo
area = base * altura

# 3 Saída
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
---- user output:
4836.0
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
---- user output:
486000.0
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
---- user output:
48360.0
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
---- user output:
486.0
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
---- user output:
481000.0
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
---- user output:
4883.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:10:22)
-- CODE: 
base = float(input('4')
altura = float(input('8'))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 1
    base = float(input('4')
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 1
    base = float(input('4')
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 1
    base = float(input('4')
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 1
    base = float(input('4')
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 1
    base = float(input('4')
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 1
    base = float(input('4')
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:10:48)
-- CODE: 
base = float(input('4'))
altura = float(input('8'))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
---- user output:
4836.0
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
---- user output:
486000.0
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
---- user output:
48360.0
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
---- user output:
486.0
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
---- user output:
481000.0
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
---- user output:
4883.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:59:09)
-- CODE: 
# Cálculo do Retângulo

# 1 Entrada

# 1.1 Base do retângulo
base = float(input('4'))

# 1.1 Altura do retângulo
altura = float(input('8'))

# 2 Comando

# 2.1 Área do retângulo
area = base * altura

# 3 Saída
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
---- user output:
4836.0
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
---- user output:
486000.0
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
---- user output:
48360.0
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
---- user output:
486.0
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
---- user output:
481000.0
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
---- user output:
4883.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
